// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkPriceMarkerV2 should render correctly with "status" attribute as "previous_selected" 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker__wrapper"
      type="button"
    >
      <div
        class="bpk-price-marker bpk-price-marker-previous_selected"
      >
        <span
          class="bpk-text bpk-text--label-2"
        >
          £120
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkPriceMarkerV2 should render correctly with "status" attribute as "selected" 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker__wrapper"
      type="button"
    >
      <div
        class="bpk-price-marker bpk-price-marker-selected bpk-price-marker--icon"
      >
        <span
          class="bpk-text bpk-text--label-2"
        >
          £120
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkPriceMarkerV2 should render correctly with a "buttonProps" attribute 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker__wrapper"
      testid="arbitrary value"
      type="button"
    >
      <div
        class="bpk-price-marker bpk-price-marker-unselected"
      >
        <span
          class="bpk-text bpk-text--label-2"
        >
          £120
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkPriceMarkerV2 should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker__wrapper"
      type="button"
    >
      <div
        class="bpk-price-marker bpk-price-marker-unselected custom-class-1 custom-class-2"
      >
        <span
          class="bpk-text bpk-text--label-2"
        >
          £120
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkPriceMarkerV2 should render correctly with a "onClick" attribute 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker__wrapper"
      type="button"
    >
      <div
        class="bpk-price-marker bpk-price-marker--dynamic bpk-price-marker-unselected"
      >
        <span
          class="bpk-text bpk-text--label-2"
        >
          £120
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkPriceMarkerV2 should render properly 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker__wrapper"
      type="button"
    >
      <div
        class="bpk-price-marker bpk-price-marker-unselected"
      >
        <span
          class="bpk-text bpk-text--label-2"
        >
          £120
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkPriceMarkerV2 should render properly with a icon 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker__wrapper"
      type="button"
    >
      <div
        class="bpk-price-marker bpk-price-marker-unselected"
      >
        <span>
          Icon
        </span>
        <span
          class="bpk-text bpk-text--label-2"
        >
          £120
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
